# android-crash-monitor-py

./: .gitignore  CLI_REFACTOR_PLAN.md  ENHANCED_MONITORING_README.md  GITHUB_SETUP.md  GUI_FRAMEWORK_ANALYSIS.md  GUI_TEST_REPORT.md  LICENSE  PIXEL_6_QUICK_REFERENCE.md  PIXEL_6_REBOOT_DIAGNOSIS_COMPLETE.md  README.md  REFACTORING_OPPORTUNITIES.md  REFACTORING_PROGRESS.md  SAVEPOINT_2025-01-26.md  SESSION_SUMMARY.md  SIMPLE_USER_GUIDE.md  STRATEGIC_GUI_ANALYSIS.md  STREAMLINED_CHANGES.md  TESTING_COMPLETED.md  TESTING_REPORT.md  WIZARD_REFACTOR.md  analyze.sh  analyze_recent_crash.py  build_app.spec  build_macos_installer.sh  create_icon.py  dmg_settings.py  easy-install.sh  launch-gui.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_tests.sh  setup.py  start.sh  system_err_analysis_report.py  test_enhanced_analysis.py  test_realtime_analysis.py  test_root_cause_analysis.py
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md
src/android_crash_monitor/: __init__.py  auto_fix.py  cli.py  gui.py  plain_language.py
src/android_crash_monitor/analysis/: __init__.py  crash_analyzer.py  enhanced_analyzer.py  enhanced_pattern_detector.py  pattern_detector.py  predictive_analytics.py  realtime_analyzer.py  report_generator.py  root_cause_analyzer.py
src/android_crash_monitor/core/: adb.py  config.py  database.py  doctor.py  enhanced_alerts.py  enhanced_detector.py  enhanced_patterns.py  monitor.py  system.py  user_config.py
src/android_crash_monitor/exporters/: __init__.py  base.py  csv_exporter.py  html_exporter.py  json_exporter.py  text_exporter.py
test_output/alerts/: alert_cascade_1759816423509_1C311FDF6000FS.json  alert_cascade_1759816423518_1C311FDF6000FS.json  alert_cascade_1759816423519_1C311FDF6000FS.json  alert_crash_1759816423508_1C311FDF6000FS.json  alert_crash_1759816423517_1C311FDF6000FS.json
tests/: conftest.py  test_analysis_system.py  test_comprehensive.py  test_enhanced_analysis.py  test_enhanced_monitoring.py  test_predictive_analytics.py  test_realtime_analysis.py  test_root_cause_analysis.py
tests/unit/: test_database.py  test_pattern_detector.py  test_user_config.py
(+14 files in other folders)
