[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "android-crash-monitor"
version = "2.1.0"
description = "Cross-platform Android crash monitoring with real-time log analysis, pattern detection, and automated reporting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Deven Ducommun"},
]
keywords = ["android", "adb", "crash", "monitor", "debugging", "logs", "mobile"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debugging",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "packaging>=21.0",
    "platformdirs>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
build = [
    "pyinstaller>=5.0.0",
    "dmgbuild>=1.6.0",
    "Pillow>=9.0.0",
]

[project.scripts]
acm = "android_crash_monitor.cli:main"

[project.urls]
Homepage = "https://github.com/DevenDucommun/android-crash-monitor-py"
Issues = "https://github.com/DevenDucommun/android-crash-monitor-py/issues"
Releases = "https://github.com/DevenDucommun/android-crash-monitor-py/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
